# typeyaml-lang

./: .gitignore  .pre-commit-hooks.yaml  .tamlrc.json  Cargo.toml  LICENSE  PROJECT_STRUCTURE.md  README.md  RELEASE.md  package-lock.json  package.json
.github/: FUNDING.yml  release.yml
.github/workflows/: bot.yml  ci-cd.yml  fuzz.yml  native-check.yml  native-release.yml  release.yml  vscode-release.yml
action/: action.yml
cli-rust/: Cargo.toml
cli-rust/src/: main.rs
crates/taml-core/: Cargo.toml
crates/taml-core/fuzz/: Cargo.toml
crates/taml-core/fuzz/fuzz_targets/: compile.rs
crates/taml-core/src/: checker.rs  emitter.rs  lexer.rs  lib.rs  parser.rs  registry.rs  wasm.rs
crates/taml-fmt/: Cargo.toml
crates/taml-lsp/: Cargo.toml
crates/taml-lsp/src/: main.rs
crates/taml-lsp/tests/: protocol.rs
crates/typeyaml-napi/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json
crates/typeyaml-napi/src/: lib.rs
crates/typeyaml-wasm/: Cargo.toml  package.json
docs/: implementation-plan.md  index.md  language-spec.md
docs/.vitepress/: config.ts
docs/guide/: cli.md  contributing.md  getting-started.md  ide.md  native-engine.md  spec.md  standard-library.md
editors/vscode/: LICENSE  extension.cjs  package.json
examples/: husky-pre-commit  k8s-deployment.taml  payment-api.tyaml
fixtures/native-parity/: basic.taml  basic.yaml
release/: README.md  SHA256SUMS.txt  artifacts.json  typeyaml-v1.0.0.tgz  typeyaml-v1.0.0.vsix
release/1.0.1/: RELEASE_NOTES.md  SHA256SUMS.txt  artifacts.json  typeyaml-v1.0.1.tgz  typeyaml-v1.0.1.vsix
scripts/: benchmark-native.ps1  clean-dist.mjs  clean-examples.mjs  copy-stdlib.mjs  create-release.ps1
src/: compiler.ts  index.ts  native.ts
src/checker/: checker.ts
src/cli/: import.ts  index.ts
src/emitter/: jsonEmitter.ts  yamlEmitter.ts
src/lexer/: lexer.ts
src/parser/: ast.ts  parser.ts
src/registry/: index.ts
src/sourcemap/: sourcemap.ts
src/stdlib/: docker-compose.taml  k8s.taml  (+2 more)
tests/: compiler.test.ts
vscode-extension/: .vscodeignore  LICENSE  README.md  extension.cjs  package-lock.json  package.json
(+17 files in other folders)
