[workspace]
members = [
  "crates/taml-core",
  "crates/typeyaml-napi",
  "crates/typeyaml-wasm",
  "cli-rust",
  "crates/taml-fmt",
  "crates/taml-lsp"
]
resolver = "2"

[workspace.package]
version = "1.0.1"
edition = "2024"
license = "LicenseRef-Magnexis-Use-Only"
repository = "https://github.com/magnexis/typeyaml-lang"
