[package]
name = "taml"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Standalone native CLI for typeYAML"

[[bin]]
name = "taml"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
taml-core = { path = "../crates/taml-core" }
taml-fmt = { path = "../crates/taml-fmt" }
