[package]
name = "taml-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Zero-runtime native compiler engine for typeYAML"

[features]
default = []
wasm = ["dep:wasm-bindgen"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
regex = "1.11"
sha2 = "0.10"
wasm-bindgen = { version = "0.2", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = "3.1"
