[package]
name = "taml-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "taml-lsp"
path = "src/main.rs"

[dependencies]
dashmap = "6.1"
serde_json = "1.0"
taml-core = { path = "../taml-core" }
tokio = { version = "1", features = ["io-std", "macros", "rt-multi-thread", "sync", "time"] }
tower-lsp = "0.20"
