[package]
name = "typeyaml-napi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi6"] }
napi-derive = "3"
taml-core = { path = "../taml-core" }
serde_json = "1.0"

[build-dependencies]
napi-build = "2"
